feat: 修改控制页面提示信息

--- a/src/MonitorController.html
+++ b/src/MonitorController.html
@@ -15,7 +15,8 @@
     <span id="status" style="color:red">未连接</span>
     <button id="btn">连接</button>
 </h3>
-<p>按下p键新增无人机，按下x键清空无人机，使用方向键控制无人机方向，连按无效。</p>
+<p>按下p键新增无人机，按下x键清空无人机，使用方向键控制无人机方向。</p>
+<p>请通过单击键盘控制，长按无效。</p>
 <script>
   let ws = null;
   const btn = document.getElementById("btn");
